@@ -20,17 +20,17 @@ class KickstartWriter:
         # All the printing handlers in the order they should be called.
         self.handlers = [self.doPlatform,
 
-                         self.doAuthconfig, self.doDmRaid,
-                         self.doAutoPart, self.doAutoStep,
-                         self.doBootloader, self.doClearPart, self.doDevice,
-                         self.doDeviceProbe, self.doDisplayMode,
-                         self.doDriverDisk, self.doFirewall, self.doFirstboot,
-                         self.doIgnoreDisk, self.doInteractive, self.doKeyboard,
-                         self.doLang, self.doMediaCheck, self.doMethod,
-                         self.doMonitor, self.doNetwork, self.doReboot,
-                         self.doRootPw, self.doSELinux, self.doSkipX,
-                         self.doTimezone, self.doUpgrade, self.doVnc,
-                         self.doXConfig, self.doZeroMbr, self.doZFCP,
+                         self.doAuthconfig, self.doDmRaid, self.doAutoPart,
+                         self.doAutoStep, self.doBootloader, self.doZeroMbr,
+                         self.doClearPart, self.doDevice, self.doDeviceProbe,
+                         self.doDisplayMode, self.doDriverDisk,
+                         self.doFirewall, self.doFirstboot, self.doIgnoreDisk,
+                         self.doInteractive, self.doKeyboard, self.doLang,
+                         self.doMediaCheck, self.doMethod, self.doNetwork,
+                         self.doReboot, self.doRootPw, self.doSELinux,
+                         self.doSkipX, self.doTimezone, self.doUpgrade,
+                         self.doVnc, self.doXConfig, self.doMonitor,
+                         self.doZFCP,
 
                          self.doPartition, self.doLogicalVolume,
                          self.doVolumeGroup, self.doRaid,
