@@ -1,3 +1,8 @@
+2006-03-13  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/writer.py (KickstartWriter.__init__):  Reorder output
+	handlers.
+
 2006-03-07  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  Bump version.
